# eloqdoc

./: .clangd  .gdbinit  .gitattributes  .gitignore  .gitmodules  .private_modules  LICENSE-Community.txt  README.md  SConstruct
.github/ISSUE_TEMPLATE/: chore.md  config.yml  enhancement.md  feature_request.md  test.md
.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Clang-format-checker.yml
buildscripts/: git-checkout.sh
buildscripts/resmokeconfig/suites/: 4.0_dbaas_aggregation.yml  4.0_dbaas_change_streams.yml  4.0_dbaas_core.yml  4.0_dbaas_core_txns.yml  4.0_dbaas_decimal.yml  4.0_dbaas_fts.yml  4.0_dbaas_geospatial.yml  4.0_dbaas_json_schema.yml  eloq_basic.yml  eloq_core.yml
concourse/pipeline/: build_debug_tarball.yml  build_nightly_tarball.yml  build_release_tarball.yml  build_tarball_open.yml  main.ent.yml  main.yml  nightly_build.ent.yml  pr.ent.yml  pr.yml  tag.yml
concourse/scripts/: build_tarball.bash  build_tarball_open.bash  cleanup_minio_bucket.py  common.sh  compile_test_main.bash  compile_test_pr.bash  main.bash  main.ent.bash  mongod.conf  nightly_build.ent.bash  pr.ent.bash  pytpcc.cfg  store_rocksdb_cloud.yaml  tag.sh
concourse/tasks/: build_nightly_tarball.yml  build_release_tarball.yml  build_tarball_open.yml  compile_test_main.yml  compile_test_pr.yml  main.ent.yml  main.yml  nightly_build.ent.yml  pr.ent.yml  tag.yml
config/: dss_config.ini  example.conf  standalone_dss_config.ini  store_rocksdb_cloud.yaml  store_rocksdb_cloud_node0.yaml  store_rocksdb_cloud_node1.yaml  store_rocksdb_cloud_node2.yaml
config/multinode/: node0.conf.template  node1.conf.template  node2.conf.template
config/standalone/: debug.conf.template  debug_coroutine.conf.template  release.conf.template  release_coroutine.conf.template
jstests/core/: add_skip_stage_before_fetch.js  batch_write_command_delete.js  batch_write_command_insert.js  batch_write_command_update.js  bench_test1.js  bulk_api_ordered.js  bulk_api_unordered.js  bulk_insert.js  bulk_legacy_enforce_gle.js  crud_api.js  distinct3.js  doc_validation.js  doc_validation_options.js  eval_nolock.js  geo_group.js  geo_s2twofields.js  getmore_invalidated_cursors.js  inc-SERVER-7446.js  index_big1.js  insert1.js  insert_illegal_doc.js  js3.js  opcounters_write_cmd.js  push2.js  remove6.js  removea.js  rename4.js  shell_writeconcern.js  update_arrayFilters.js  update_dbref.js  updatej.js  updatel.js  write_result.js
jstests/eloq_basic/: multikey_index.js
scripts/: build_mongo.sh  format.sh  gdb_add_index.sh  git-checkout.sh  git-tag.sh  install_dependency_ubuntu2404.sh  run_with_config.sh  test.sh
src/mongo/base/: local_thread_state.cpp  local_thread_state.h  object_pool.h
src/mongo/db/: SConscript  catalog_raii.cpp  client.cpp  client.h  coro_sync.cpp  coro_sync.h  cursor_manager.cpp  db.cpp  keys_collection_manager.cpp  keys_collection_manager.h  kill_sessions_local.cpp  mongod_options.cpp  op_observer.h  op_observer_impl.cpp  op_observer_impl.h  op_observer_registry.h  operation_context.cpp  operation_context.h  server_options.h  server_options_server_helpers.cpp  service_context.cpp  service_context.h  service_entry_point_common.cpp  session.cpp  session.h  session_catalog.cpp  session_catalog.h  session_killer.cpp  session_killer.h  system_index.cpp  ttl.cpp
src/mongo/db/auth/: authorization_manager_impl.cpp  authz_manager_external_state_mock.cpp  role_graph_update.cpp
src/mongo/db/catalog/: capped_utils.cpp  catalog_control.cpp  coll_mod.cpp  collection.h  collection_catalog_entry.h  collection_impl.cpp  collection_impl.h  collection_options.cpp  collection_options.h  create_collection.cpp  database.h  database_impl.cpp  database_impl.h  drop_collection.cpp  drop_indexes.cpp  index_catalog_entry.cpp  index_catalog_entry.h  index_catalog_entry_impl.cpp  index_catalog_entry_impl.h  index_catalog_impl.cpp  index_create_impl.cpp  index_key_validate.cpp  rename_collection.cpp  uuid_catalog.cpp  uuid_catalog.h
src/mongo/db/commands/: count_cmd.cpp  create_indexes.cpp  dbcommands_d.cpp  feature_compatibility_version.cpp  find_and_modify.cpp  generic.cpp  geo_near_cmd.cpp  list_collections.cpp  list_databases.cpp  mr.cpp  parallel_collection_scan.cpp  repair_cursor.cpp  run_aggregate.cpp
src/mongo/db/concurrency/: d_concurrency.cpp  eloq_locker_noop.h  lock_state.cpp  lock_state.h
src/mongo/db/exec/: projection_exec.cpp  stagedebug_cmd.cpp
src/mongo/db/free_mon/: free_mon_op_observer.h
src/mongo/db/modules/eloq/: CMakeLists.txt  SConscript  build.py
src/mongo/db/modules/eloq/cmake/: build_cass_driver.cmake  build_data_store.cmake  build_eloq_log_service.cmake  build_eloq_metrics.cmake  build_log_service.cmake  build_open_log_service.cmake  build_tx_service.cmake  compile_protos.cmake  find_dependencies.cmake
src/mongo/db/modules/eloq/src/: eloq_cursor.cpp  eloq_cursor.h  eloq_global_options.cpp  eloq_global_options.h  eloq_index.cpp  eloq_index.h  eloq_init.cpp  eloq_kv_engine.cpp  eloq_kv_engine.h  eloq_options_init.cpp  eloq_record_store.cpp  eloq_record_store.h  eloq_recovery_unit.cpp  eloq_recovery_unit.h
src/mongo/db/modules/eloq/src/base/: eloq_catalog_factory.cpp  eloq_catalog_factory.h  eloq_key.cpp  eloq_key.h  eloq_log_agent.h  eloq_record.cpp  eloq_record.h  eloq_table_schema.cpp  eloq_table_schema.h  eloq_util.cpp  eloq_util.h  metrics_registry_impl.cpp  metrics_registry_impl.h
src/mongo/db/modules/eloq/src/store_handler/: cass_handler.cpp  cass_handler.h  cass_scanner.cpp  cass_scanner.h  kv_store.h  partition.h
src/mongo/dbtests/: matchertests.cpp  query_stage_collscan.cpp  query_stage_count.cpp  query_stage_fetch.cpp  query_stage_multiplan.cpp  query_stage_tests.cpp  query_stage_update.cpp
src/mongo/rpc/: SConscript
src/mongo/shell/: assert.js
src/mongo/transport/: SConscript  service_entry_point.h  service_entry_point_impl.cpp  service_entry_point_impl.h  service_executor.h  service_executor_coroutine.cpp  service_executor_coroutine.h  service_state_machine.cpp  service_state_machine.h
src/mongo/util/: background.cpp
(+56 files in other folders)
